--- a/3-tier-Architecture-using-Docker/backend-flask/Dockerfile
+++ b/3-tier-Architecture-using-Docker/backend-flask/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu:22.04
-RUN apt-get update && apt-get install -y python
+RUN apt-get update && apt-get install -y python3
 RUN apt-get install -y python3-pip mysql-server libmysqlclient-dev && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
