--- a/3-tier-Architecture-using-Docker/backend-flask/Dockerfile
+++ b/3-tier-Architecture-using-Docker/backend-flask/Dockerfile
@@ -7,6 +7,11 @@ RUN mkdir /code
 WORKDIR /code
 ADD requirements.txt /code/
 RUN pip3 install -r requirements.txt
+RUN pip3 install -r requirements.txt && \
+    pip3 install jinja2 && \
+    pip3 install --upgrade flask jinja2 && \
+    pip3 install install urllib3 six && \
+    pip install --upgrade requests urllib3 six
 ADD . /code/
 CMD ["python3", "backend.py" ]
 
